spring-boot version changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,8 @@ spring.mvc.view.prefix:/WEB-INF/jsp/
 spring.mvc.view.suffix:.jsp
 application.message: Bala
 server.error.whitelabel.enabled = false 
-#this is in spring boot 2.0 otherwise we use  server.contextPath
  server.servlet.context-path = /spring-boot-secrity
-server.port=9001 
-#this or in ConfigContainer
-# ===============================
-# = DATA SOURCE
-# ===============================
-# Database
+server.port=9090 
 db.driver: com.mysql.jdbc.Driver
 db.url:  jdbc:mysql://localhost/springbootsec?useSSL=false
 db.username: root
@@ -22,5 +16,5 @@ hibernate.hbm2ddl.auto: validate
 entitymanager.packagesToScan:  com.bala.springbootsecurity.model
 
 #log properties
-#logging.level.org.springframework.web=ERROR
-#logging.level.org.hibernate=ERROR
+logging.level.org.springframework.web=ERROR
+logging.level.org.hibernate=ERROR
