--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.mvc.view.prefix:/WEB-INF/jsp/
 spring.mvc.view.suffix:.jsp
-application.message: Bala
+application.message: test
 server.error.whitelabel.enabled = false 
- server.servlet.context-path = /spring-boot-secrity
-server.port=9090 
+ server.servlet.context-path = /spring-boot-security
+server.port=8080 
 db.driver: com.mysql.jdbc.Driver
 db.url:  jdbc:mysql://localhost/springbootsec?useSSL=false
 db.username: root
@@ -12,7 +12,7 @@ db.password: root
 # Hibernate
 hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql: true
-hibernate.hbm2ddl.auto: validate	
+hibernate.hbm2ddl.auto: create	
 entitymanager.packagesToScan:  com.bala.springbootsecurity.model
 
 #log properties
